--- a/flask_blog/templates/home.html
+++ b/flask_blog/templates/home.html
@@ -10,7 +10,7 @@
             </div>
             <div class="col-md-8">
                 <p class="py-sm-3 mt-sm-3 lead">
-                    <span class="blue">Quick</span><span class="yellow">Fuel</span>
+                    <span class="yellow">Quick</span><span class="green">Fuel</span>
                     incorporates two major revenue generating industries, first one is
                     Automobile and the second one is Oil and Gas industry. The project is a proposal
                     on how Indian petroleum pumps should structure their customer serving for optimal
@@ -30,10 +30,10 @@
                 <img class="img-fluid" src="{{ image }}/anpr.png">
             </div>
             <div class="col-md-8">
-                <h2 class="display-4 blue mt-sm-5">
+                <h2 class="display-4 yellow mt-sm-5">
                     Real Time Updates of Fuel Stations <br /> 
                 </h2>
-                <p class="h2 yellow">Plan your visits from home</p>
+                <p class="h2 green">Plan your visits from home</p>
             </div>
         </div>
     </div>
