--- a/flask_blog/templates/layout.html
+++ b/flask_blog/templates/layout.html
@@ -63,7 +63,7 @@
   <nav class="navbar navbar-light navbar-expand-md bg-white w-100">
     <div class="container">
       <a class="navbar-brand mr-4" href="/">
-        <img src="{{ image }}/final-logo2.png" class="img-fluid">
+        <img src="{{ image }}/logo-7.png" class="img-fluid">
       </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
