--- a/flask_blog/templates/home.html
+++ b/flask_blog/templates/home.html
@@ -49,14 +49,14 @@
                 <div class="row my-sm-5">
                     <div class="col-sm-6">
                         <div class="features card p-2 shadow-sm border-0 mb-3 mb-sm-0">
-                            <img class="img-fluid mx-auto my-3" src="{{ image }}/1.live-data.png">
+                            <img class="img-fluid mx-auto my-3" src="{{ image }}/DataMonitoring.png">
                             <p class="caption">Live Data
                                 Monitoring</p>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="features card p-2 shadow-sm border-0 mb-3 mb-sm-0">
-                            <img class="img-fluid mx-auto my-3" src="{{ image }}/2.detect-leakage.png">
+                            <img class="img-fluid mx-auto my-3" src="{{ image }}/customer-exp.jpg">
                             <p class="caption">Customer Experience</p>
                         </div>
                     </div>
@@ -64,14 +64,14 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="features card p-2 shadow-sm border-0 mb-3 mb-sm-0">
-                            <img class="img-fluid mx-auto my-3" src="{{ image }}/3.interlinked-network.png">
+                            <img class="img-fluid mx-auto my-3" src="{{ image }}/iot-connect.png">
                             <p class="caption">Interlinked
                                 Network</p>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="features card p-2 shadow-sm border-0 mb-3 mb-sm-0">
-                            <img class="img-fluid mx-auto my-3" src="{{ image }}/4.business-and-finance.png">
+                            <img class="img-fluid mx-auto my-3" src="{{ image }}/time.jpg">
                             <p class="caption">Monitor your
                                 consumption</p>
                         </div>
