--- a/flask_blog/templates/about.html
+++ b/flask_blog/templates/about.html
@@ -41,7 +41,27 @@
                     customer experience better.
                 </p>
                 </ol>
+                <h2>How this works?</h2>
+                <ul>
+                <p>
+                <li><b>Step 1</b>: Create an account.</li>
+                First of all <a href="{{ url_for('register') }}">register</a> on the website using your basic details.
+                <br>
+                <li><b>Step 2:</b> Log in to your account with your email and password.</li>
+                log in to your account to recieve real time fuel station traffic updates nearby your live location.
+                <br>    
+                <li><b>Step 3:</b> Go to your profile page</li>
+                In your profile page all the details regarding fuel stations are available. You can browse through and check 
+                which one is nearest and vaxant during your time.
+                <br>
+                <li><b>What next?</b></li>
+                Now once registered users visit the fuel stations our device will process the Automatic Number Plate Recognition and the vehicle
+                once identified will be registered in the database as a client for that particular fuel station. 
+                
+                </ul>
+                </p>
             </p>
+
         </div>
     </div>
 </div>
