--- a/flask_blog/templates/home.html
+++ b/flask_blog/templates/home.html
@@ -50,7 +50,7 @@
                     <div class="col-sm-6">
                         <div class="features card p-2 shadow-sm border-0 mb-3 mb-sm-0">
                             <img class="img-fluid mx-auto my-3" src="{{ image }}/DataMonitoring.png">
-                            <p class="caption">Live Data
+                            <p class="caption2">Live Data
                                 Monitoring</p>
                         </div>
                     </div>
@@ -65,15 +65,13 @@
                     <div class="col-sm-6">
                         <div class="features card p-2 shadow-sm border-0 mb-3 mb-sm-0">
                             <img class="img-fluid mx-auto my-3" src="{{ image }}/iot-connect.png">
-                            <p class="caption">Interlinked
-                                Network</p>
+                            <p class="caption">Interconnected Fields</p>
                         </div>
                     </div>
                     <div class="col-sm-6">
                         <div class="features card p-2 shadow-sm border-0 mb-3 mb-sm-0">
                             <img class="img-fluid mx-auto my-3" src="{{ image }}/time.jpg">
-                            <p class="caption">Monitor your
-                                consumption</p>
+                            <p class="caption2">Save Time and Money</p>
                         </div>
                     </div>
                 </div>
